--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="position-relative form-group" id="divCust">
-                    @Html.LabelFor(model => model.Customer, "Customer", htmlAttributes: new { @class = "control-label col-md-5" })
+                    @Html.LabelFor(model => model.Customer, "Company", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
                         @Html.DropDownList("Customer_Id", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Customer, "", new { @class = "text-danger" })
