--- a/ProAcc/Views/ProjectMonitor/Create.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Create.cshtml
@@ -309,8 +309,8 @@
             });
             
 			$('#jqGrid').navGrid('#jqGridPager',
-			    // the buttons to appear on the toolbar of the grid
-			    { edit: false, add: false, del: false, search: true, refresh: false, view: false, position: "left", cloneToTop: false },
+                // the buttons to appear on the toolbar of the grid
+                { edit: false, add: true, del: false, search: true, refresh: false, view: false, position: "left", cloneToTop: false },
 			    // options for the Edit Dialog
 			    {
 			        editCaption: "The Edit Dialog",
