--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -275,7 +275,7 @@
                                     @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
                                     {
                                         <li>
-                                            <a href="@Url.Action("Create", "ProjectMonitor")">
+                                            <a href="@Url.Action("AssusmentMonitor", "ProjectMonitor")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 Assessment Monitor
                                             </a>
